--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
+    "broccoli-asset-rev": "^2.0.2",
     "broccoli-autoprefixer": "^2.1.0",
     "broccoli-sass": "^0.4.0",
-    "ember-cli": "0.2.0",
-    "ember-cli-app-version": "0.3.2",
+    "ember-cli": "0.2.1",
+    "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^4.0.0",
-    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
     "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.12",
+    "ember-data": "1.0.0-beta.12",  
     "ember-export-application-global": "^1.0.2",
     "ember-moment": "1.1.1",
-    "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git",
-    "emberfire": "git+https://github.com/firebase/emberfire.git",
+    "ember-paper": "git://github.com/miguelcobain/ember-paper",
+    "emberfire": "git://github.com/firebase/emberfire",
+    "torii": "0.2.3",
+    "torii-fire": "0.2.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5",
-    "liquid-fire": "git+https://github.com/ef4/liquid-fire.git"
+    "glob": "^4.0.5"
   }
 }
