--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.12",  
+    "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.2",
     "ember-moment": "1.1.1",
     "ember-paper": "git://github.com/miguelcobain/ember-paper",
     "emberfire": "git://github.com/firebase/emberfire",
-    "torii": "0.2.3",
-    "torii-fire": "0.2.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "liquid-fire": "git+https://github.com/ef4/liquid-fire.git",
+    "torii": "0.2.3",
+    "torii-fire": "0.2.0"
   }
 }
