--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.12",
+    "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
     "ember-moment": "1.1.1",
     "ember-paper": "git://github.com/miguelcobain/ember-paper",
-    "emberfire": "git://github.com/firebase/emberfire",
+    "emberfire": "git+https://github.com/firebase/emberfire.git#ts-ed-beta-16-compat",
     "express": "^4.8.5",
     "glob": "^4.0.5",
     "liquid-fire": "git://github.com/ef4/liquid-fire",
